Fixes metadata mapping list not showing informations when loaded.

--- a/src/views/admin/scss/_dropdown-and-autocomplete.scss
+++ b/src/views/admin/scss/_dropdown-and-autocomplete.scss
@@ -96,6 +96,7 @@
                         overflow-x: visible !important;
                         white-space: normal !important;
                         word-wrap: break-word;
+                        word-break: break-word;
                     }
                 }
             }
